syntax = "proto3";

import "api/general/v1/common.proto";

package letscrum.api.item.v1;

option go_package = "github.com/letscrum/letscrum/api/item/v1";

message Epic {
  int64 id = 1;
}

message ListEpicRequest {
  string org_id = 1;
  string project_id = 2;
  int32 page = 3;
  int32 size = 4;
  string keyword = 5;
}

message ListEpicResponse {
  repeated Epic items = 1;
  letscrum.api.general.v1.Pagination pagination = 2;
}
