syntax = "proto3";

package letscrum.api.org.v1;

option go_package = "github.com/letscrum/letscrum/api/org/v1";

message Org {
  string id = 1;
  string name = 2;
  string display_name = 3;
  string description = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
}

message CreateOrgRequest {
  string name = 1;
  string description = 2;
}

message CreateOrgResponse {
  bool success = 1;
  string id = 2;
}
