syntax = "proto3";

import "api/general/v1/common.proto";

package letscrum.api.user.v1;

option go_package = "github.com/letscrum/letscrum/api/user/v1";

message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  bool is_super_admin = 5;
  int64 created_at = 9;
  int64 updated_at = 10;
  Token token = 11;
}

message Token {
  string access_token = 1;
  string refresh_token = 2;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  bool is_super_admin = 4;
}

message CreateUserResponse {
  int64 id = 1;
}

message SignInRequest {
  string name = 1;
  string password = 2;
}

message SignInResponse {
  User item = 1;
}

message ListUserRequest {
  string keyword = 1;
  int32 page = 2;
  int32 size = 3;
}

message ListUserResponse {
  repeated User items = 1;
  letscrum.api.general.v1.Pagination pagination = 2;
}

message GetUserRequest {
  int64 user_id = 1;
}

message GetUserResponse {
  User item = 1;
}
